# nls-engine

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  _Makefile  cmake_install.cmake  compile_commands.json  log.txt  main  nls-engine  settings.dat~  test.lua  timer.sh
res/shaders/: basic.frag  basic.vert
scripts/: main.lua  main.lua~  player.lua  safecall.lua  safecall.lua~
scripts/core/: entity.lua  input.lua  math.lua  math.lua~
src/: GameManager.cpp  GameManager.cpp~  GameManager.hpp  GameManager.hpp~  Log.cpp  Log.cpp~  Log.hpp  Log.hpp~  LuaScript.cpp  LuaScript.hpp  Math.hpp  Window.cpp  Window.hpp  compile_commands.json  compile_commands.json~  main.cpp
src/game/: GameObject.cpp  GameObject.cpp~  GameObject.hpp  LuaContext.hpp
src/graphics/: Camera.cpp  Camera.hpp  Sprite.cpp  Sprite.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp
src/graphics/low_level/: ArrayBuffer.cpp  ArrayBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  basic2.vert
src/physics/: BoxCollider2D.cpp  BoxCollider2D.cpp~  BoxCollider2D.hpp  BoxCollider2D.hpp~  PhysicsEngine.cpp  PhysicsEngine.cpp~  PhysicsEngine.hpp  PhysicsEngine.hpp~
